[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clusterCleaver"
version = "0.0.0.3"
authors = [
  { name="Tyler Jost", email="tyler_jost@utexas.edu" },
]
dependencies = [
    "scanpy>=1.9.8",
    "scipy>=1.12.0",
    "matplotlib>=3.8",
    "numpy>=1.26.3",
    "seaborn>=0.13.2",
    "tqdm>=4.66.1",
    "pandas>=2.2.0"
]
description = "Separate your clusters with gene distance"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/brocklab/clusterCleaver"
Issues =   "https://github.com/brocklab/clusterCleaver/issues"
